import { Client } from "@elastic/elasticsearch";
import { getUrlCloudinary } from "../util/cloudinary.js";
import { transformPropertyInList } from "../util/help.js";
import dotenv from "dotenv";
import clientAudio from "../grpc/audioSearch.js";
import { promisify } from "util";
import { Song } from "../model/entity/index.js";
import redis from "../config/redis.config.js";
import { normalizeTextForAutocomplete } from "../util/help.js";

dotenv.config();

const AUTOCOMPLETE_CACHE_TTL = 3000;
const SEARCH_CACHE_TTL = 3000;

const client = new Client({
  node: process.env.ELASTIC_URL,
});
const { keys, redisClient, redisSub, getOrSetCache, safeParse, safeStringify } =
  redis;

const searchData = async (queryText, { from = 0, size = 30 } = {}) => {
  console.log("üöÄ ~ searchData ~ queryText:", queryText);
  try {
    const normalizedQuery = queryText;
    console.log("üöÄ ~ searchData ~ normalizedQuery:", normalizedQuery);
    const cacheKey = keys.search(`${normalizedQuery}:${from}:${size}`);

    return getOrSetCache(
      cacheKey,
      async () => {
        const indexes = ["artists", "songs"];
        const existingIndexes = [];

        // --- Ki·ªÉm tra Index T·ªìn t·∫°i (Gi·ªØ nguy√™n) ---
        for (const index of indexes) {
          const exists = await client.indices.exists({ index });
          if (exists) existingIndexes.push(index);
        }

        if (existingIndexes.length === 0)
          return { artists: [], songs: [], suggestions: [] };

        const response = await client.search({
          index: existingIndexes,
          from,
          size,

          // 1. KH·ªêI SUGGEST: D√πng ƒë·ªÉ truy v·∫•n tr∆∞·ªùng 'autocomplete' (type: completion)
          suggest: {
            "all-autocomplete": {
              prefix: normalizedQuery,
              completion: {
                field: "autocomplete", // √Åp d·ª•ng Suggester cho t·∫•t c·∫£ c√°c index
                size: 10,
              },
            },
          },

          // 2. KH·ªêI QUERY: D√πng cho t√¨m ki·∫øm ch√≠nh x√°c, prefix, fuzziness (tr√™n c√°c tr∆∞·ªùng TEXT)
          query: {
            bool: {
              should: [
                // A. MATCH CH√çNH X√ÅC & KEYWORD (Boost cao nh·∫•t)
                {
                  multi_match: {
                    query: normalizedQuery,
                    // Gi·ªØ '.keyword' cho artists. Kh·∫£ nƒÉng cao 'songs' ch·ªâ c√≥ 'title' th∆∞·ªùng.
                    fields: ["name.keyword^5", "title.keyword^5", "title^4"],
                    type: "best_fields",
                    boost: 5,
                  },
                },
                // B. PHRASE PREFIX (Lo·∫°i b·ªè 'autocomplete' ƒë·ªÉ tr√°nh l·ªói)
                {
                  multi_match: {
                    query: normalizedQuery,
                    // Ch·ªâ t√¨m ki·∫øm tr√™n c√°c tr∆∞·ªùng text an to√†n: 'name' v√† 'title'
                    fields: ["name^3", "title^3"],
                    type: "phrase_prefix",
                    boost: 3,
                  },
                },
                // C. FUZZINESS (X·ª≠ l√Ω l·ªói ch√≠nh t·∫£, c≈©ng lo·∫°i b·ªè 'autocomplete')
                {
                  multi_match: {
                    query: normalizedQuery,
                    fields: ["name", "title"], // Ch·ªâ t√¨m ki·∫øm tr√™n name v√† title
                    fuzziness: "AUTO",
                    operator: "and",
                    boost: 1,
                  },
                },
              ],
              minimum_should_match: 1,
            },
          },
        });

        // console.log("üöÄ ~ searchData ~ response:", response);

        let artists = [];
        let songs = [];
        let suggestions = [];
        console.log(response.hits?.hits);

        // --- X·ª≠ l√Ω K·∫øt qu·∫£ T√¨m ki·∫øm (Hits) ---
        for (const hit of response.hits?.hits || []) {
          const doc = { id: hit._id, ...hit._source };
          if (hit._index === "artists") artists.push(doc);
          else if (hit._index === "songs") songs.push(doc);
        }

        // --- X·ª≠ l√Ω K·∫øt qu·∫£ G·ª£i √Ω (Suggestions) ---
        // L·∫•y c√°c g·ª£i √Ω t·ª´ block 'suggest'
        suggestions =
          response.suggest?.["all-autocomplete"]?.[0]?.options.map((opt) => ({
            text: opt.text,
            index: opt._index,
            source: opt._source,
          })) || [];

        // --- Transform URL (Gi·ªØ nguy√™n) ---
        [songs, artists] = await Promise.all([
          transformPropertyInList(songs, ["coverImage"], getUrlCloudinary),
          transformPropertyInList(artists, ["avatarUrl"], getUrlCloudinary),
        ]);

        const result = { artists, songs, suggestions }; // Th√™m suggestions v√†o k·∫øt qu·∫£

        return result;
      },
      3600
    );
  } catch (error) {
    console.error("‚ùå L·ªói khi t√¨m ki·∫øm:", error.message);
    return { artists: [], songs: [], suggestions: [] };
  }
};

const addDataElastic = async (doc, id, index) => {
  try {
    const response = await client.index({
      index: index,
      id: id,
      document: doc,
      refresh: "wait_for",
    });
    return response;
  } catch (error) {
    console.error("L·ªói khi th√™m t√†i li·ªáu:", error);
  }
};

const deleteDataElastic = async (id, index) => {
  try {
    const response = await client.delete({
      index: index,
      id: id,
      refresh: "wait_for",
    });

    return response;
  } catch (error) {
    if (error.statusCode === 404) {
      console.warn(`Kh√¥ng t√¨m th·∫•y t√†i li·ªáu ID: ${id} ƒë·ªÉ x√≥a.`);
    } else {
      console.error("L·ªói khi x√≥a t√†i li·ªáu:", error);
    }
  }
};

const searchAudio = async (audioFile) => {
  const request = { audio: audioFile.buffer };
  const SearchSongAsync = promisify(clientAudio.SearchSong.bind(clientAudio));
  const song = await SearchSongAsync(request).catch((error) => {
    console.error("Error embedding song:", error);
  });

  if (!song) return null;

  const data = await Song.findByPk(song.songId, {
    attributes: ["title", "id", "coverImage"],
  });
  if (!data) return null;

  data.coverImage = data?.coverImage
    ? await getUrlCloudinary(data.coverImage)
    : null;

  const key = redis.keys.waveform(song.songId);

  return redis.getOrSetCache(key, async () => data);
};

const autocomplete = async (q, size = 20) => {
  const normalized = q.trim().toLowerCase();
  const key = keys.autocomplete(normalized + ":" + size);
  const cached = await redisClient.get(key);
  if (cached) return safeParse(cached);

  const indexes = ["artists", "songs"];

  const resp = await client.search({
    index: indexes.join(","),
    size,
    query: {
      match_phrase_prefix: {
        autocomplete: normalized,
      },
    },
    _source: ["title", "name", "coverImage", "autocomplete"], // c√°c field c·∫ßn
  });

  // Map k·∫øt qu·∫£
  const suggestions = resp.hits.hits.map((h) => ({
    id: h._id,
    ...h._source,
  }));

  // L∆∞u v√†o Redis
  await redisClient.set(key, safeStringify(suggestions), {
    EX: AUTOCOMPLETE_CACHE_TTL,
  });

  return suggestions;
};

export {
  searchData,
  addDataElastic,
  deleteDataElastic,
  searchAudio,
  autocomplete,
};
